2020-04-25 Marek M. Cel <marekcel@marekcel.pl>
    
    * OSG widgets refactorization



2020-04-19 Marek M. Cel <marekcel@marekcel.pl>
    
    * Garmin G1000 refactorization



2020-04-18 Marek M. Cel <marekcel@marekcel.pl>
    
    * Garmin G1000 display additional features
    
    * Garmin G1000 IFD simulation



2020-04-12 Marek M. Cel <marekcel@marekcel.pl>
    
    * Garmin G1000 display additional features
    
    * Garmin G1000 avionics simulation infrastructure
    
    * more keys used as HID input
    
    * default input keys changed



2020-04-05 Marek M. Cel <marekcel@marekcel.pl>
    
    * CMake files
    
    * WiX installer building scripts and input files
    
    * Qt Installer Framework buildings scripts and input files
    
    * dpkg input files



2020-04-04 Marek M. Cel <marekcel@marekcel.pl>
    
    * Flaps notches
    
    * Garmin G1000 display
    
    * Cessna 172 Bendix/King KAP 140 and Garmin GFC 700 autopilot



2020-03-07 Marek M. Cel <marekcel@marekcel.pl>
    
    * Qt Installer Framework config files and scripts
    
    * P-51 landing gear aerodynamics
    
    * C-130 landing gear and flaps aerodynamics
    
    * CMake files



2020-03-01 Marek M. Cel <marekcel@marekcel.pl>

    * C-130 and P-51 landing gear aerodynamics



2020-02-29 Marek M. Cel <marekcel@marekcel.pl>

    * CGI - vectors, rotor blur, blades datum and paths
    
    * SFX - first attempt
    
    * testing utilities
    
    * WiX files and scripts
    
    * horizontal stabilizer downwash as table



2020-02-22 Marek M. Cel <marekcel@marekcel.pl>

    * blade element method

    * time measurement



2020-02-16 Marek M. Cel <marekcel@marekcel.pl>

    * blade element method



2020-02-15 Marek M. Cel <marekcel@marekcel.pl>

    * stabilizer type as constant
    
    * blade element method
    
    * rotor test



2020-02-08 Marek M. Cel <marekcel@marekcel.pl>

    * UH-60 model according to NASA-CR-166309
    