@@ -1,3 +1,11 @@
+2020-05-17 Marek M. Cel <marekcel@marekcel.pl>
+    
+    * units ID strings
+	
+	* building with MSVC 2019
+
+
+
 2020-04-25 Marek M. Cel <marekcel@marekcel.pl>
     
     * OSG widgets refactorization
